# RnD-new-entity

./: .gitignore  README.md
allocators/: CMakeLists.txt  main.cpp
arm-trust-zone/: Makefile  README.md
arm-trust-zone/include/: hello_ta_uuid.h
arm-trust-zone/ree_host/: host.mk  main.c
arm-trust-zone/ta/: hello_ta.c  ta.mk
arm-trust-zone/ta/include/: user_ta_header_defines.h
crypto-challenges/: Makefile  README.md
crypto-challenges/src/: main.c
daemon/: README.md  solution.c
flight-openssl/: Makefile  README.md
flight-openssl/inc/: main.h
flight-openssl/src/: main.c
ipc/: README.md  solution.c
libdl/: Makefile  README.md  libshared.c  solution.c
linux-kernel-modules/stepik/: Makefile  solution.c  test.c
linux-kernel-modules/uid_changer/: Makefile  README.md  uid_changer.c
pipe/: Makefile  solution.c
proc/: Makefile  solution.c
select/: solution.c
signal/: solution.c
simple-xor/: Makefile  simple_xor.c
vim/: README.md
