cmake_minimum_required(VERSION 3.10)

project(Allocators VERSION 1.0)

################################################################################
# Source files
################################################################################
set (SRC
	main.cpp
)

################################################################################
# Built binary
################################################################################
add_executable (${PROJECT_NAME} ${SRC})
